# wwb_task

./: .gitignore  README.md  implementation_log.md  pyproject.toml  task_intro.md
configs/: nanobot_openrouter.example.json  nanobot_vllm.example.json
data/: api_eval_cases.json  diy_cases.json  smoketest_cases.json  vllm_eval_cases_128.json
eval_pipeline/: __init__.py  __main__.py  cli.py  config.py  dataset.py  models.py  nanobot_client.py  runner.py  trace.py
tests/: test_dataset.py  test_runner.py  test_trace.py
