[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobot-eval-pipeline"
version = "0.1.0"
description = "Concurrent isolated evaluation pipeline for NanoBot/OpenClaw-style agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
nanobot-eval = "eval_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eval_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
